Bug 1260483 - Use AssocQueryString to get friendly protocol handler names. r=jimm

In Win8+, AssocQueryString supports ASSOCF_IS_PROTOCOL which simplifies fetching
the friendly application name for a given protocol/scheme. For "Universal" apps,
this simplified mechanism is required to get something other than TWINUI.

MozReview-Commit-ID: pTruoBeTgK